--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -8,14 +8,16 @@
 <h2>Login</h2>
 
 <form asp-action="Login" method="post">
+    <div class="form-group">
+        <label asp-for="UserName">User Name</label>
+        <input asp-for="UserName" type="text" class="form-control" required />
+        <span asp-validation-for="UserName" class="text-danger"></span> 
+    </div>
 
     <div class="form-group">
-        <label asp-for="@Model.UserName">User Name</label>
-        <input asp-for="@Model.UserName" type="text" class="form-control" required />
-    </div>
-    <div class="form-group">
-        <label asp-for="@Model.Password">Password</label>
-        <input asp-for="@Model.Password" type="password" class="form-control" required />
+        <label asp-for="Password">Password</label>
+        <input asp-for="Password" type="password" class="form-control" required />
+        <span asp-validation-for="Password" class="text-danger"></span> 
     </div>
 
     @if (TempData["error"] != null)
@@ -26,4 +28,4 @@
     }
 
     <button type="submit" class="btn btn-primary mt-3">Login</button>
-</form>
+</form> 
